# litellm-stack

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ollama  LICENSE  Makefile  README.md  SETUP.md  USAGE.md  docker-compose.override.yml.example  docker-compose.yml  litellm_settings.yml  pyproject.toml  requirements.txt  test_setup.sh
.git-crypt/keys/default/0/: 84F093480C0BD2E11894B39E6424E0492E0ECEA1.gpg
docs/: INTERNAL_SETUP.md  architecture-litellm-ollama-final.md  git-repository-strategy.md  wsl2-gpu-guide.md
example/: test_langchain_agent.py  test_langchain_openai.py  test_openai.py
scripts/: gpu_status.sh  health_check.sh  list_models.sh  migrate.sh  setup_models.sh  test_setup.sh
src/: run_langchain_agent.py
