[project]
name = "litellm-langchain-agent"
version = "0.1.0"
description = "A simple LangChain agent using litellm."
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "duckduckgo-search",
    "litellm>=1.34.0",
    "ddgs>=9.9.1",
]

[project.optional-dependencies]
dev = ["uv"]
