[project]
name = "litellm-stack"
version = "0.1.0"
description = "Monorepo for efficiently orchestrating LiteLLM and Ollama in one stack."
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-openai",
    "duckduckgo-search",
    "litellm>=1.34.0",
    "ddgs>=9.9.1",
]

[project.optional-dependencies]
dev = ["uv"]
